--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=msvc-hotel
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/msvc-hotels
+spring.datasource.username=root
+spring.datasource.password=admin12345
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+
+
+
+
